--- a/app/views/products/_product.html.erb
+++ b/app/views/products/_product.html.erb
@@ -1,4 +1,8 @@
 <div  id="<%= dom_id product %>" >
+  <div>
+    <%=image_tag product.img_url, class:"sz"%>
+  </div>
+  <div class="card-body">
   <p>
     <strong>Name:</strong>
     <%= product.name %>
@@ -28,10 +32,5 @@
     <strong>Stock:</strong>
     <%= product.stock %>
   </p>
-
-  <p>
-    <strong>Img url:</strong>
-    <%= product.img_url %>
-  </p>
-
+  </div>
 </div>
