--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -8,10 +8,10 @@
             <%= f.submit "Buscar", class:"btn btn-boz"%>
         <%end%>
     </div>
-<div class="row justify-content" id="products">
-    <%= paginate(@products) %>
+<div class="row justify-content-center" id="products">
+
     <% @products.each do |product| %>
-    <div class="card col-3 mx-2 my-4">
+    <div class="card col-5 mx-3 my-4">
       <%= render product %>
       <p>
       <%= link_to "Show this product", product,class:"lk-boz" %>
