--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -18,7 +18,9 @@
       </p>
     </div>
   <% end %>
+  <div class="items-allign-center">
   <%= paginate(@products) %>
+  </div>
 </div>
 
 <%= link_to "New product", new_product_path,class:"lk-boz"%>
