--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,13 +1,20 @@
 <p style="color: green"><%= notice %></p>
 
-<%= link_to "New product", new_product_path,class:"lk-boz"%>
-<div class="col-10 d-flex justify-content-end w-100">
-        <%= search_form_for @q do |f|%>
-            <%= f.label :t_schedule%>
-            <%= f.search_field :t_schedule_eq%>
-            <%= f.submit "Buscar", class:"btn btn-boz"%>
-        <%end%>
+<div class="row">
+    
+     <%= link_to "New product", new_product_path, class:"btn btn-boz  justify-content-start col-2 "%>
+
+    <div class="col-10 d-flex justify-content-end ">
+
+       
+
+            <%= search_form_for @q do |f|%>
+                <%= f.label :t_schedule%>
+                <%= f.search_field :t_schedule_eq%>
+                <%= f.submit "Buscar", class:"btn btn-boz"%>
+            <%end%>
     </div>
+</div>
 
     <nav class="navbar text-white justify-content-center lk-boz">
             <%= paginate @products %>
