Mod file app/views/products/index.html.erb add tit Productos

--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -1,5 +1,8 @@
 <p style="color: green"><%= notice %></p>
 
+<h1>Productos</h1>
+<br>
+
 <div class="row">
     
      <%= link_to "New product", new_product_path, class:"btn btn-boz  justify-content-start col-2 "%>
