--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -21,9 +21,12 @@
     --color4: rgb(135, 76, 98);
     --d-color4: rgb(95, 45, 68);
 }
-
+header{
+    background-color: var(--color2);
+}
 body{
     background-color: var(--color1);
+    height: 100%;
 }
 footer{
     background-color: var(--color2);
